# SplitTasks-V1

./: .gitignore  main.py  pyproject.toml
app/: logger.py  main.py  middleware.py
app/config/: vars.py
app/errors/: conf.py  error.py  group.py  security.py  user.py
app/repository/: base_models.py  enums.py  models.py  session.py  types.py
app/routes/: base_payload.py  currency.py  expense.py  group.py  invitation.py  security.py  user.py
app/utils/: authentication.py
config/: vars.py
public/: currency.csv
repository/: enums.py  models.py
routes/: currency.py  group.py  user.py
tests/: conftest.py  test_authentication.py  test_currency.py  test_group.py  test_security.py  test_user.py
