[project]
name = "SplitTasks"
version = "0.0.1-alpha"
description = "SplitTasks - Manage Tasks, Expenses and Responsibilites. Available on Web, Android and iOS."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.120.0",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.27",
]
authors = [{ name = 'Aditya Mayukh Som', email = "aditya.m.som@axantial.com" }]
maintainers = [
    { name = 'Aditya Mayukh Som', email = "aditya.m.som@axantial.com" },
]

[tool.black]
line-length = 120

[tool.mypy]
plugins = ['pydantic.mypy']
