[project]
name = "SplitTasks"
version = "0.0.1-alpha"
description = "SplitTasks - Manage Tasks, Expenses and Responsibilites. Available on Web, Android and iOS."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.120.2",
    "phonenumbers>=9.0.17",
    "psycopg2>=2.9.11",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pycountry>=24.6.1",
    "pydantic-extra-types>=2.10.6",
    "pydantic-settings>=2.11.0",
    "pyjwt[crypto]>=2.10.1",
    "sqlmodel>=0.0.27",
]
authors = [
    { name = 'Aditya Mayukh Som', email = "aditya.m.som@axantial.com" }
]
maintainers = [
    { name = 'Aditya Mayukh Som', email = "aditya.m.som@axantial.com" },
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pip>=25.3",
    "pytest>=8.4.2",
]

[tool.black]
line-length = 120

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
addopts = "-s -vv --cov=. --cov-report=html"

